2012-12-27  Mike West  <mkwst@chromium.org>

        Add context to the console message generated by Document::printNavigationErrorMessage.
        https://bugs.webkit.org/show_bug.cgi?id=105774

        Reviewed by Darin Adler.

        * fast/frames/sandboxed-iframe-close-top-noclose-expected.txt:
        * fast/frames/sandboxed-iframe-history-denied-expected.txt:
        * fast/frames/sandboxed-iframe-navigation-parent-expected.txt:
        * fast/frames/sandboxed-iframe-navigation-targetlink-expected.txt:
        * fast/frames/sandboxed-iframe-navigation-top-by-name-denied-expected.txt:
        * fast/frames/sandboxed-iframe-navigation-top-denied-expected.txt:
        * fast/frames/seamless/seamless-window-location-sandbox-expected.txt:
        * http/tests/security/no-popup-from-sandbox-top-expected.txt:
        * http/tests/security/frameNavigation/not-opener-expected.txt:
        * http/tests/security/frameNavigation/xss-DENIED-plugin-navigation-expected.txt:
        * http/tests/security/frameNavigation/xss-DENIED-targeted-link-navigation-expected.txt:
        * platform/chromium/http/tests/security/frameNavigation/xss-DENIED-plugin-navigation-expected.txt:
        * platform/chromium/http/tests/security/no-popup-from-sandbox-top-expected.txt:
            Update test expectations with new error message.

2012-12-27  Vsevolod Vlasov  <vsevik@chromium.org>

        Web Inspector: [Regression] Can not set breakpoints in scripts loaded with source map.
        https://bugs.webkit.org/show_bug.cgi?id=105801

        Reviewed by Alexander Pavlov.

        * http/tests/inspector/compiler-script-mapping-expected.txt:
        * http/tests/inspector/compiler-script-mapping.html:
        * http/tests/inspector/debugger-test.js:
        (initialize_DebuggerTest):

2012-12-27  Christophe Dumez  <christophe.dumez@intel.com>

        [EFL][WK2] Regression(135935) layout tests snapshots are flaky
        https://bugs.webkit.org/show_bug.cgi?id=103468
