@@ -1,3 +1,14 @@
+2012-12-27  Stuart Eichert  <stuart@fivemicro.com>
+
+        instance-of-immediates.js : the word "passing" is spelled incorrectly
+        https://bugs.webkit.org/show_bug.cgi?id=105669
+
+        Reviewed by Julien Chaffraix.
+
+        Corrected spelling of the word "passing" in instance-of-immediates.js
+
+        * fast/js/script-tests/instance-of-immediates.js:
+
 2012-12-27  Mike West  <mkwst@chromium.org>
 
         Add context to the console message generated by Document::printNavigationErrorMessage.
